changed loader, font and cleaned up code

--- a/code/public/index.html
+++ b/code/public/index.html
@@ -1,63 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Trispace&display=swap"
-			rel="stylesheet"
-		/>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Trispace&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Courier+Prime:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
 
-		<link rel="Icon" href="./assets/red-heart.png" />
-		<meta name="description" content="Share your happy thoughts" />
-		<!-- Facebook Meta Tags -->
-		<meta
-			property="og:url"
-			content="https://mt-dotse-happy-thoughts.netlify.app/"
-		/>
-		<meta property="og:type" content="website" />
-		<meta
-			property="og:title"
-			content="Happy Thoughts - Technigo project by Madelene Trang"
-		/>
-		<meta
-			property="og:description"
-			content="A happy place on the internet built with React. Share your happy thoughts!"
-		/>
-		<meta
-			property="og:image"
-			content="https://mt-dotse-happy-thoughts.netlify.app/assets/og-img.jpg"
-		/>
+    <link rel="Icon" href="./assets/favicon.ico" />
+    <meta name="description" content="Share your happy thoughts" />
+    <!-- Facebook Meta Tags -->
+    <meta
+      property="og:url"
+      content="https://mt-dotse-happy-thoughts.netlify.app/"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Happy Thoughts - Technigo project by Madelene Trang"
+    />
+    <meta
+      property="og:description"
+      content="A happy place on the internet built with React. Share your happy thoughts!"
+    />
+    <meta
+      property="og:image"
+      content="https://mt-dotse-happy-thoughts.netlify.app/assets/og-img.jpg"
+    />
 
-		<!-- Twitter Meta Tags -->
-		<meta name="twitter:card" content="summary_large_image" />
-		<meta
-			property="twitter:domain"
-			content="https://mt-dotse-happy-thoughts.netlify.app/"
-		/>
-		<meta
-			property="twitter:url"
-			content="https://mt-dotse-happy-thoughts.netlify.app/"
-		/>
-		<meta
-			name="twitter:title"
-			content="Happy Thoughts - Technigo project by Madelene Trang"
-		/>
-		<meta
-			name="twitter:description"
-			content="A happy place on the internet built with React. Share your happy thoughts!"
-		/>
-		<meta
-			name="twitter:image"
-			content="https://mt-dotse-happy-thoughts.netlify.app/assets/og-img.jpg"
-		/>
-		<title>Happy Thoughts</title>
-	</head>
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:domain"
+      content="https://mt-dotse-happy-thoughts.netlify.app/"
+    />
+    <meta
+      property="twitter:url"
+      content="https://mt-dotse-happy-thoughts.netlify.app/"
+    />
+    <meta
+      name="twitter:title"
+      content="Happy Thoughts - Technigo project by Madelene Trang"
+    />
+    <meta
+      name="twitter:description"
+      content="A happy place on the internet built with React. Share your happy thoughts!"
+    />
+    <meta
+      name="twitter:image"
+      content="https://mt-dotse-happy-thoughts.netlify.app/assets/og-img.jpg"
+    />
+    <title>Happy Thoughts</title>
+  </head>
 
-	<body>
-		<noscript>You need to enable JavaScript to run this app.</noscript>
-		<div id="root"></div>
-		<!--
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -67,5 +71,5 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-	</body>
+  </body>
 </html>
