--- a/code/public/index.html
+++ b/code/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--Allow us to use icons-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.min.css" integrity="sha512-ZYg+hQvLlM0W9C3P6vTpes5LmJ66G2EsroxDNzwD6qiulckldb29eD9I672HL2X+LH5nRhY1sQqZLJGB+aUUPg==" crossorigin="anonymous" /> <!--Allow us to use icons-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-1/css/all.min.css" integrity="sha512-ZYg+hQvLlM0W9C3P6vTpes5LmJ66G2EsroxDNzwD6qiulckldb29eD9I672HL2X+LH5nRhY1sQqZLJGB+aUUPg==" crossorigin="anonymous" /> <!--Allow us to use icons-->+
     <link
       href="https://fonts.googleapis.com/css2?family=Trispace:wght@100;300;400&display=swap"
       rel="stylesheet"
@@ -27,7 +27,7 @@
     />
     <meta
       property="og:image"
-      content="https://my-happy-thoughts-place.netlify.app/image/screenshot.png"
+      content="https://my-happy-thoughts-place.netlify.app/assets/og-img.png"
     />
 
     <!-- Twitter Meta Tags -->
@@ -48,20 +48,10 @@
     />
     <meta
       name="twitter:image"
-      content="https://my-happy-thoughts-place.netlify.app/image/screenshot.png"
+      content="https://my-happy-thoughts-place.netlify.app/assets/og-img.png"
     /> 
     <title>Happy Thoughts</title>
   </head>
-
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
