--- a/code/public/index.html
+++ b/code/public/index.html
@@ -4,6 +4,9 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="apple-touch-icon" sizes="180x180" href="thinking.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="thinking.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="thinking.png">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
