--- a/code/public/index.html
+++ b/code/public/index.html
@@ -14,6 +14,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Technigo React App</title>
+
+    <link rel="icon" href="./images/heart.png" type="image/gif">
   </head>
 
   <body>
