--- a/code/public/index.html
+++ b/code/public/index.html
@@ -15,7 +15,7 @@
     -->
     <title>Technigo React App</title>
 
-    <link rel="icon" href="./images/heart.png" type="image/gif">
+    <link rel="icon" href="./assets/heart.png" type="image/gif">
   </head>
 
   <body>
