--- a/code/public/index.html
+++ b/code/public/index.html
@@ -41,6 +41,8 @@
     -->
   </body>
   <script src="https://kit.fontawesome.com/4f3ce16e3e.js" crossorigin="anonymous"></script>
+
+  <!-- Heart cursor -->
   <script>
     // <![CDATA[
     var colours=new Array('#f00', '#f06', '#f0f', '#f6f', '#f39', '#f9c'); // colours of the hearts
