--- a/code/public/index.html
+++ b/code/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="https://cdn-icons.flaticon.com/png/512/4603/premium/4603183.png?token=exp=1635600910~hmac=46d79a0d9515aa9ded5fd50a2b85bbe3" type="image"/>
     <link href="https://api.fontshare.com/css?f[]=bespoke-slab@400,500,700&display=swap" rel="stylesheet">
-    <title>Happy Thoughts!</title>
+    <title>Happy thoughts!</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
