--- a/code/public/index.html
+++ b/code/public/index.html
@@ -5,6 +5,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet"/>
+
+    <!--og/meta tags for sharing on social media-->
+    <meta property="og:title" content="Ida Näslund, project-happy-thoughts">
+    <meta property="og:type" content="article" />
+    <meta property="og:description" content="Social media wall in React">
+    <meta property="og:image" content="https://i.postimg.cc/QMkmt8qC/project-happy-thoughts.png">
+    <meta property="og:url" content="https://jocular-trifle-d608b4.netlify.app/">
+    <meta name="twitter:card" content="summary_large_image">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
