--- a/code/public/index.html
+++ b/code/public/index.html
@@ -9,6 +9,7 @@
 			href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap"
 			rel="stylesheet"
 		/>
+		<link rel="icon" type="image/x-icon" href="assets/favicon.png" />
 		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
