--- a/code/public/index.html
+++ b/code/public/index.html
@@ -4,33 +4,21 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Technigo React App</title>
-
+    <title>Happy Thoughts App – React</title>
     <link rel="icon" href="./assets/heart.png" type="image/gif">
+
+        <!-- OG TAGS – SOCIAL MEDIA -->
+        <meta property="og:title" content="Emma Lindell – Happy Thoughts Project">
+        <meta property="og:description" content="Social media wall built in React">
+        <meta property="og:image" content="https://i.postimg.cc/LXrF2X5Y/happy-thoughts-project.jpg">
+        <meta property="og:url" content="https://happy-thoughts-today.netlify.app/">
   </head>
 
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 
 </html>
