--- a/code/public/index.html
+++ b/code/public/index.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Happy Thoughts App – React</title>
+        
+    <!-- FAVICON-->
     <link rel="icon" href="./assets/heart.png" type="image/gif">
 
-        <!-- OG TAGS – SOCIAL MEDIA -->
-        <meta property="og:title" content="Emma Lindell – Happy Thoughts Project" />
-        <meta property="og:description" content="Social media wall built in React" />
-        <meta property="og:image" content="https://i.postimg.cc/LXrF2X5Y/happy-thoughts-project.jpg" />
-        <meta property="og:url" content="https://happy-thoughts-today.netlify.app/" />
+    <!-- OG TAGS – SOCIAL MEDIA -->
+    <meta property="og:title" content="Emma Lindell – Happy Thoughts Project" />
+    <meta property="og:description" content="Social media wall built in React" />
+    <meta property="og:image" content="https://i.postimg.cc/LXrF2X5Y/happy-thoughts-project.jpg" />
+    <meta property="og:url" content="https://happy-thoughts-today.netlify.app/" />
   </head>
 
   <body>
